fix cumulative layout shift

--- a/src/assets/components/header/_header.scss
+++ b/src/assets/components/header/_header.scss
@@ -58,9 +58,7 @@
 		align-items: flex-end;
 		gap: 40px;
 		@media screen and (max-width: 992px) {
-			flex-direction: column;
-			align-items: center;
-			gap: 20px;
+			display: none;
 		}
 	}
 
